--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>Rebecca Khidesheli</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -36,7 +36,7 @@
         <!--left side-->
 
         <a class="navbar-brand order-1 mr-lg-0" href="#">
-            <img src="images/logo.png" id="logo">
+            <img src="logo.png" id="logo">
         </a>
         <button class="navbar-toggler order-2" type="button" data-bs-toggle="collapse" data-bs-target=".navigation-menu">
             <span class="navbar-toggler-icon"></span>
@@ -64,7 +64,7 @@
   <h3 class="sec1_description" id="sec1_description2">Thank you for stopping by and feel free to look
     around.
   </h3>
- <img src="images/g.gif" id="gif">
+ <img src="g.gif" id="gif">
 </section>
  <!--Section 1 End-->
 
